--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 
-  <link rel="stylesheet" href="../CSS/style.css" type="text/css">
+  <link rel="stylesheet" href="./style.css" type="text/css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
